# Wave-Engine-Rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  imgui.ini  main.rs
.github/workflows/: build.yml  rust.yml
SPIR-V/: compile_shaders.bat
res/shaders/: default_3D.frag  default_3D.vert  gl_x_spv_test.frag  gl_x_spv_test.vert  glsl_330.frag  glsl_330.gs  glsl_330.vert  glsl_420.frag  glsl_420.gs  glsl_420.vert  glsl_420_solid_wireframe.gs  glsl_430.frag  glsl_430.gs  glsl_430.vert  glsl_460.frag  glsl_460.gs  glsl_460.vert  test.frag  test.vert  test_frag.glsl  test_vert.glsl  vulkan_test.frag  vulkan_test.vert
src/: lib.rs  main.rs
src/wave/: logger.rs  mod.rs
src/wave/assets/: mod.rs  renderable_assets.rs
src/wave/camera/: mod.rs
src/wave/graphics/: buffer.rs  mod.rs  renderer.rs  shader.rs  vertex.rs
src/wave/input/: mod.rs
src/wave/math/: mod.rs
src/wave/utils/: asset_loader.rs  mod.rs
src/wave/window/: mod.rs
src/wave_core/: Cargo.toml
src/wave_core/assets/: asset_loader.rs  renderable_assets.rs
src/wave_core/camera/: mod.rs
src/wave_core/events/: mod.rs
src/wave_core/graphics/: color.rs  mod.rs  renderer.rs  shader.rs  texture.rs
src/wave_core/graphics/open_gl/: buffer.rs  mod.rs  renderer.rs  shader.rs
src/wave_core/graphics/vulkan/: buffer.rs  mod.rs  renderer.rs  shader.rs
src/wave_core/input/: mod.rs
src/wave_core/layers/: app_layer.rs  imgui_layer.rs  mod.rs  renderer_layer.rs  shader_layer.rs  window_layer.rs
src/wave_core/math/: mod.rs
src/wave_core/src/: lib.rs
src/wave_core/src/assets/: asset_loader.rs  mod.rs  r_assets.rs  renderable_assets.rs
src/wave_core/src/camera/: mod.rs
src/wave_core/src/dependencies/: mod.rs
src/wave_core/src/events/: mod.rs
src/wave_core/src/graphics/: color.rs  mod.rs  renderer.rs  shader.rs  texture.rs
src/wave_core/src/graphics/open_gl/: buffer.rs  renderer.rs  shader.rs  texture.rs
src/wave_core/src/graphics/vulkan/: buffer.rs  renderer.rs  shader.rs  texture.rs
src/wave_core/src/input/: mod.rs
src/wave_core/src/layers/: imgui_layer.rs  mod.rs  renderer_layer.rs  window_layer.rs
src/wave_core/src/math/: mod.rs
src/wave_core/src/ui/: mod.rs
src/wave_core/src/utils/: mod.rs  texture_loader.rs
src/wave_core/src/window/: mod.rs
src/wave_core/ui/: mod.rs
src/wave_core/utils/: mod.rs
src/wave_core/window/: mod.rs
src/wave_editor/: Cargo.toml  main.rs
src/wave_editor/src/: lib.rs
src/wave_editor/tests/: mod.rs
tests/: mod.rs
tests/wave/: mod.rs  test_logger.rs
tests/wave/graphics/: mod.rs  renderer.rs  test_shader.rs  test_vertex.rs  test_vulkan.rs
tests/wave/input/: mod.rs
tests/wave/math/: mod.rs
tests/wave/utils/: mod.rs  test_asset_loader.rs  test_logger.rs  test_time.rs
tests/wave_core/: mod.rs
tests/wave_core/math/: mod.rs
(+25 files in other folders)
