[package]
name = "wave-engine"
version = "0.1.3"
edition = "2021"

[dependencies]
num = "0.4.1"
rand = "0.8.5"
gl46 = { version = "0.2.1", features = ["track_caller"] }
gl = { version = "0.14.0", features = [] }
ash = { version = "0.37.3", features = ["linked"] }
chrono = "0.4.31"
glfw = { version = "0.55.0", features = ["vulkan"] }
imgui = { version = "0.11.0", features = ["docking"] }
imgui-opengl-renderer = "0.12.1"
once_cell = "1.19.0"
shaderc = "0.8.3"
bitflags = { version = "2.4.2", features = [] }
assimp = "0.3.1"

[[bin]]
name = "wave_editor"
path = "src/wave_editor/main.rs"

[features]
default = []
debug = []
imgui = []
profiler = []
vulkan = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = false
