[package]
name = "wave_engine"
version = "0.1.0"
edition = "2021"
authors = ["Nami Reghbati"]

[dependencies]
wave-editor = {path = "src/wave_editor", features = ["debug", "imgui", "vulkan"]}

[[bin]]
name = "wave-engine"
path = "main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = false
