[package]
name = "wave_engine"
version = "0.1.0"
edition = "2021"
authors = ["Nami Reghbati"]

[dependencies]
wave-core = {path = "src/wave_core", features = ["debug", "vulkan"]}
wave-editor = {path = "src/wave_editor"}

[[bin]]
name = "wave-engine"
path = "main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = false
